log
src/ProductionDBadapter.cpp: In member function 'virtual bool ProductionDBadapter::isSign(std::string, std::string)':
src/ProductionDBadapter.cpp:27:24: error: cannot bind non-const lvalue reference of type 'mysqlpp::Query&' to an rvalue of type 'mysqlpp::Query'
   27 |  auto& res = conn.query(req);
      |              ~~~~~~~~~~^~~~~
src/ProductionDBadapter.cpp:29:15: error: no matching function for call to 'begin(mysqlpp::Query&)'
   29 |  for(auto i : res){
      |               ^~~
In file included from /usr/include/c++/9.2.0/bits/range_access.h:36,
                 from /usr/include/c++/9.2.0/string:54,
                 from src/include/ProductionDBadapter.h:2,
                 from src/ProductionDBadapter.cpp:2:
/usr/include/c++/9.2.0/initializer_list:89:5: note: candidate: 'template<class _Tp> constexpr const _Tp* std::begin(std::initializer_list<_Tp>)'
   89 |     begin(initializer_list<_Tp> __ils) noexcept
      |     ^~~~~
/usr/include/c++/9.2.0/initializer_list:89:5: note:   template argument deduction/substitution failed:
src/ProductionDBadapter.cpp:29:15: note:   'mysqlpp::Query' is not derived from 'std::initializer_list<_Tp>'
   29 |  for(auto i : res){
      |               ^~~
In file included from /usr/include/c++/9.2.0/string:54,
                 from src/include/ProductionDBadapter.h:2,
                 from src/ProductionDBadapter.cpp:2:
/usr/include/c++/9.2.0/bits/range_access.h:48:5: note: candidate: 'template<class _Container> decltype (__cont.begin()) std::begin(_Container&)'
   48 |     begin(_Container& __cont) -> decltype(__cont.begin())
      |     ^~~~~
/usr/include/c++/9.2.0/bits/range_access.h:48:5: note:   template argument deduction/substitution failed:
/usr/include/c++/9.2.0/bits/range_access.h: In substitution of 'template<class _Container> decltype (__cont.begin()) std::begin(_Container&) [with _Container = mysqlpp::Query]':
src/ProductionDBadapter.cpp:29:15:   required from here
/usr/include/c++/9.2.0/bits/range_access.h:48:50: error: 'class mysqlpp::Query' has no member named 'begin'; did you mean 'beg'?
   48 |     begin(_Container& __cont) -> decltype(__cont.begin())
      |                                           ~~~~~~~^~~~~
      |                                           beg
/usr/include/c++/9.2.0/bits/range_access.h:58:5: note: candidate: 'template<class _Container> decltype (__cont.begin()) std::begin(const _Container&)'
   58 |     begin(const _Container& __cont) -> decltype(__cont.begin())
      |     ^~~~~
/usr/include/c++/9.2.0/bits/range_access.h:58:5: note:   template argument deduction/substitution failed:
/usr/include/c++/9.2.0/bits/range_access.h: In substitution of 'template<class _Container> decltype (__cont.begin()) std::begin(const _Container&) [with _Container = mysqlpp::Query]':
src/ProductionDBadapter.cpp:29:15:   required from here
/usr/include/c++/9.2.0/bits/range_access.h:58:56: error: 'const class mysqlpp::Query' has no member named 'begin'; did you mean 'beg'?
   58 |     begin(const _Container& __cont) -> decltype(__cont.begin())
      |                                                 ~~~~~~~^~~~~
      |                                                 beg
/usr/include/c++/9.2.0/bits/range_access.h:87:5: note: candidate: 'template<class _Tp, long unsigned int _Nm> constexpr _Tp* std::begin(_Tp (&)[_Nm])'
   87 |     begin(_Tp (&__arr)[_Nm])
      |     ^~~~~
/usr/include/c++/9.2.0/bits/range_access.h:87:5: note:   template argument deduction/substitution failed:
src/ProductionDBadapter.cpp:29:15: note:   mismatched types '_Tp [_Nm]' and 'mysqlpp::Query'
   29 |  for(auto i : res){
      |               ^~~
In file included from /usr/include/c++/9.2.0/string:54,
                 from src/include/ProductionDBadapter.h:2,
                 from src/ProductionDBadapter.cpp:2:
/usr/include/c++/9.2.0/bits/range_access.h:104:31: note: candidate: 'template<class _Tp> _Tp* std::begin(std::valarray<_Tp>&)'
  104 |   template<typename _Tp> _Tp* begin(valarray<_Tp>&);
      |                               ^~~~~
/usr/include/c++/9.2.0/bits/range_access.h:104:31: note:   template argument deduction/substitution failed:
src/ProductionDBadapter.cpp:29:15: note:   'mysqlpp::Query' is not derived from 'std::valarray<_Tp>'
   29 |  for(auto i : res){
      |               ^~~
In file included from /usr/include/c++/9.2.0/string:54,
                 from src/include/ProductionDBadapter.h:2,
                 from src/ProductionDBadapter.cpp:2:
/usr/include/c++/9.2.0/bits/range_access.h:105:37: note: candidate: 'template<class _Tp> const _Tp* std::begin(const std::valarray<_Tp>&)'
  105 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&);
      |                                     ^~~~~
/usr/include/c++/9.2.0/bits/range_access.h:105:37: note:   template argument deduction/substitution failed:
src/ProductionDBadapter.cpp:29:15: note:   'mysqlpp::Query' is not derived from 'const std::valarray<_Tp>'
   29 |  for(auto i : res){
      |               ^~~
src/ProductionDBadapter.cpp:29:15: error: no matching function for call to 'end(mysqlpp::Query&)'
In file included from /usr/include/c++/9.2.0/bits/range_access.h:36,
                 from /usr/include/c++/9.2.0/string:54,
                 from src/include/ProductionDBadapter.h:2,
                 from src/ProductionDBadapter.cpp:2:
/usr/include/c++/9.2.0/initializer_list:99:5: note: candidate: 'template<class _Tp> constexpr const _Tp* std::end(std::initializer_list<_Tp>)'
   99 |     end(initializer_list<_Tp> __ils) noexcept
      |     ^~~
/usr/include/c++/9.2.0/initializer_list:99:5: note:   template argument deduction/substitution failed:
src/ProductionDBadapter.cpp:29:15: note:   'mysqlpp::Query' is not derived from 'std::initializer_list<_Tp>'
   29 |  for(auto i : res){
      |               ^~~
In file included from /usr/include/c++/9.2.0/string:54,
                 from src/include/ProductionDBadapter.h:2,
                 from src/ProductionDBadapter.cpp:2:
/usr/include/c++/9.2.0/bits/range_access.h:68:5: note: candidate: 'template<class _Container> decltype (__cont.end()) std::end(_Container&)'
   68 |     end(_Container& __cont) -> decltype(__cont.end())
      |     ^~~
/usr/include/c++/9.2.0/bits/range_access.h:68:5: note:   template argument deduction/substitution failed:
/usr/include/c++/9.2.0/bits/range_access.h: In substitution of 'template<class _Container> decltype (__cont.end()) std::end(_Container&) [with _Container = mysqlpp::Query]':
src/ProductionDBadapter.cpp:29:15:   required from here
/usr/include/c++/9.2.0/bits/range_access.h:68:5: error: 'std::ios_base::end' cannot be used as a function
/usr/include/c++/9.2.0/bits/range_access.h:78:5: note: candidate: 'template<class _Container> decltype (__cont.end()) std::end(const _Container&)'
   78 |     end(const _Container& __cont) -> decltype(__cont.end())
      |     ^~~
/usr/include/c++/9.2.0/bits/range_access.h:78:5: note:   template argument deduction/substitution failed:
/usr/include/c++/9.2.0/bits/range_access.h: In substitution of 'template<class _Container> decltype (__cont.end()) std::end(const _Container&) [with _Container = mysqlpp::Query]':
src/ProductionDBadapter.cpp:29:15:   required from here
/usr/include/c++/9.2.0/bits/range_access.h:78:5: error: 'std::ios_base::end' cannot be used as a function
/usr/include/c++/9.2.0/bits/range_access.h:97:5: note: candidate: 'template<class _Tp, long unsigned int _Nm> constexpr _Tp* std::end(_Tp (&)[_Nm])'
   97 |     end(_Tp (&__arr)[_Nm])
      |     ^~~
/usr/include/c++/9.2.0/bits/range_access.h:97:5: note:   template argument deduction/substitution failed:
src/ProductionDBadapter.cpp:29:15: note:   mismatched types '_Tp [_Nm]' and 'mysqlpp::Query'
   29 |  for(auto i : res){
      |               ^~~
In file included from /usr/include/c++/9.2.0/string:54,
                 from src/include/ProductionDBadapter.h:2,
                 from src/ProductionDBadapter.cpp:2:
/usr/include/c++/9.2.0/bits/range_access.h:106:31: note: candidate: 'template<class _Tp> _Tp* std::end(std::valarray<_Tp>&)'
  106 |   template<typename _Tp> _Tp* end(valarray<_Tp>&);
      |                               ^~~
/usr/include/c++/9.2.0/bits/range_access.h:106:31: note:   template argument deduction/substitution failed:
src/ProductionDBadapter.cpp:29:15: note:   'mysqlpp::Query' is not derived from 'std::valarray<_Tp>'
   29 |  for(auto i : res){
      |               ^~~
In file included from /usr/include/c++/9.2.0/string:54,
                 from src/include/ProductionDBadapter.h:2,
                 from src/ProductionDBadapter.cpp:2:
/usr/include/c++/9.2.0/bits/range_access.h:107:37: note: candidate: 'template<class _Tp> const _Tp* std::end(const std::valarray<_Tp>&)'
  107 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&);
      |                                     ^~~
/usr/include/c++/9.2.0/bits/range_access.h:107:37: note:   template argument deduction/substitution failed:
src/ProductionDBadapter.cpp:29:15: note:   'mysqlpp::Query' is not derived from 'const std::valarray<_Tp>'
   29 |  for(auto i : res){
      |               ^~~
make: *** [makefile:43: target/obj/ProductionDBadapter.o] Error 1
